# moonfire-playground

./: .gitignore  Cargo.toml  README.md
avcc/: Cargo.toml
avcc/src/: main.rs
camera-analytics/: Cargo.toml  README.md
camera-analytics/src/: dahua.rs  hikvision.rs  main.rs  multipart.rs  rtsp.rs
camera-analytics/src/testdata/dahua/: crosslinedetection-start-human  crosslinedetection-start-vehicle  crosslinedetection-stop-human  crosslinedetection-stop-vehicle  intelliframe-pulse-start  intelliframe-pulse-stop  lefunctionstatussync-pulse  ntpadjusttime-pulse  parkingdetection-start  parkingdetection-stop  rtspsessiondisconnect-start  rtspsessiondisconnect-stop  smartmotionhuman-start  smartmotionhuman-stop  smartmotionvehicle-start  smartmotionvehicle-stop  timechange-pulse  videomotion-start  videomotion-stop  videomotioninfo-state
camera-motion/: Cargo.toml  README.md
camera-motion/src/: .main.rs.swp  dahua.rs  hikvision.rs  main.rs  multipart.rs  nvr.rs
client/: Cargo.toml
client-cli/: Cargo.toml
client-cli/src/: main.rs
client/src/: lib.rs  recording.rs  updater.rs
nal-viewer/: Cargo.toml
nal-viewer/src/: main.rs
nvr-analytics/: Cargo.toml  README.md  build.rs
nvr-analytics/src/: inferencer.proto
nvr-motion/: Cargo.toml  README.md  viewer.html
nvr-motion/ffmpeg/: Cargo.toml  build.rs  lib.rs  wrapper.c
nvr-motion/src/: build.rs  inferencer.proto  lib.rs  schema.sql
nvr-motion/tflite/: Cargo.toml  build.rs  edgetpu.rs  lib.rs
onvif/: Cargo.toml
onvif/src/: cmd.rs  main.rs  resp.rs  xml.rs
onvif/src/testdata/: create_pull_point_subscription_response.xml  get_capabilities_response.xml  get_metadata_configurations_response.xml  pull_messages_response.xml
rtsp/: Cargo.toml  README.md  dumpqueries.sql
rtsp/examples/: discard.rs  write_mp4.rs
rtsp/examples/client/: main.rs  metadata.rs  mp4.rs  timedump.rs  timedump.sql  timestats.rs
rtsp/src/: client.rs  lib.rs  main.rs  mp4.rs  timedump.rs  timedump.sql  timestats.rs
rtsp/src/client/: channel_mapping.rs  h264.rs  mod.rs  parse.rs  rtcp.rs  rtp.rs  timeline.rs
rtsp/src/client/application/: onvif.rs
rtsp/src/client/audio/: aac.rs  mod.rs
rtsp/src/client/testdata/: hikvision_describe.txt  hikvision_setup.txt
rtsp/src/client/video/: h264.rs  mod.rs
rtsp/src/codec/: aac.rs  g711.rs  g723.rs  h264.rs  mod.rs  onvif.rs  simple_audio.rs
split-live/: Cargo.toml  README.md
split-live/src/: main.rs
