[package]
name = "camera-analytics"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
async-trait = "0.1.36"
base64 = "0.13"
bstr = "0.2.13"
bytes = "1.0"
cstr = "0.1.7"
structopt = "0.3.21"
failure = "0.1.5"
fnv = "1.0.6"
futures = "0.3.5"
httparse = "1.3.3"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["release_max_level_trace" ] }
mime = "0.3.13"
moonfire-ffmpeg = { git = "https://github.com/scottlamb/moonfire-ffmpeg" }
moonfire-nvr-client = { path = "../client" }
mylog = { git = "https://github.com/scottlamb/mylog" }
openssl = "0.10.16"
pretty-hex = "0.1.0"
regex = "1.1.0"
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "0.8.1", features = ["serde", "std", "v4"] }
xml-rs = "0.8"
xmltree = "0.10.0"
