[package]
name = "camera-analytics"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
bstr = "0.2.13"
bytes = "1.0"
cstr = "0.2"
failure = "0.1.5"
fnv = "1.0.6"
futures = "0.3.5"
http-auth = { version = "0.1.5", features = ["http"] }
httparse = "1.3.3"
lazy_static = "1.2.0"
log = { version = "0.4", features = ["release_max_level_trace" ] }
mime = "0.3.13"
moonfire-base = { git = "https://github.com/scottlamb/moonfire-nvr" }
moonfire-ffmpeg = { git = "https://github.com/scottlamb/moonfire-ffmpeg" }
moonfire-nvr-client = { path = "../client" }
multipart-stream = "0.1.1"
mylog = { git = "https://github.com/scottlamb/mylog" }
pin-project = "1.0.6"
pretty-hex = "0.2.1"
regex = "1.1.0"
reqwest = { version = "0.11.2", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
structopt = "0.3.21"
tokio = { version = "1.0", features = ["full"] }
toml = "0.5.8"
xml-rs = "0.8"
xmltree = "0.10.0"
