[package]
name = "camera-motion"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
bytes = "0.4.11"
docopt = "1.0.2"
failure = "0.1.5"
fnv = "1.0.6"
http = "0.1.15"
httparse = "1.3.3"
lazy_static = "1.2.0"
log = "0.3"
mime = "0.3.13"
openssl = "0.10.16"
pretty-hex = "0.1.0"
regex = "1.1.0"
reqwest = "0.9.9"
rusqlite = "0.16.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
slog = "1.2"
slog-envlogger = "0.5"
slog-stdlog = "1.1"
slog-term = "1.3"
uuid = { version = "0.7", features = ["serde", "std", "v4"] }
xml-rs = "0.8"
