[package]
name = "moonfire-nvr-client"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
bytes = "0.4.11"
failure = "0.1.5"
lazy_static = "1.0"
log = { version = "0.4.8", features = ["release_max_level_trace" ] }
regex = "1.0"
reqwest = { version = "0.10.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
time = "0.1"
uuid = { version = "0.8.1", features = ["serde", "std", "v4"] }

[profile.release]
debug = true

[profile.bench]
debug = true
