[package]
name = "moonfire-nvr-client"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
bytes = "1.0"
failure = "0.1.5"
futures = "0.3.5"
lazy_static = "1.0"
log = { version = "0.4.8", features = ["release_max_level_trace" ] }
moonfire-base = { git = "https://github.com/scottlamb/moonfire-nvr" }
parking_lot = "0.11.0"
reqwest = { version = "0.11.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.38"
time = "0.1"
tokio = { version = "1.0", features = ["full"] }
url = { version = "2.2.1", features = ["serde"] }
uuid = { version = "0.8.1", features = ["serde", "std", "v4"] }
