[package]
name = "nvr-analytics"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[[bin]]
name = "inferencer"

[[bin]]
name = "inferencer_server"

[[bin]]
name = "webvtt_standalone"

[dependencies]
bytes = "1.0"
crossbeam = "0.8"
cstr = "0.2"
failure = "0.1.7"
futures = "0.3.4"
log = { version = "0.4.8", features = ["release_max_level_debug"] }
indicatif = "0.14.0"
moonfire-nvr-client = { path = "../client" }
moonfire-ffmpeg = { git = "https://github.com/scottlamb/moonfire-ffmpeg", features = ["swscale"] }
moonfire-tflite = { git = "https://github.com/scottlamb/moonfire-tflite", features = ["edgetpu"] }
mylog = { git = "https://github.com/scottlamb/mylog" }
parking_lot = "0.11.0"
prost = "0.7"
rayon = "1.3.0"
reqwest = "0.11.2"
rusqlite = "0.25.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
structopt = "0.3.12"
tokio = { version = "1.0", features = ["full"] }
tonic = "0.4"
uuid = "0.8.1"
zstd = "0.7"

[build-dependencies]
prost-build = "0.7"
tonic-build = "0.4.1"
