[package]
name = "moonfire-motion"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
cstr = "0.1.7"
moonfire-ffmpeg = { path = "ffmpeg" }
moonfire-tflite = { path = "tflite" }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"

[workspace]
members = ["ffmpeg", "tflite"]

[profile.release]
debug = true
