[package]
name = "onvif"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
base64 = "0.10.1"
chrono = "0.4.6"
docopt = "1.0.2"
failure = "0.1.5"
lazy_static = "1.2.0"
memchr = "2.1.3"
openssl = "0.10"
reqwest = "0.9.9"
roxmltree = "0.4.1"
time = "0.1"
url = "1.7"
