[package]
name = "onvif"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

[dependencies]
base64 = "0.13"
chrono = "0.4.6"
structopt = "0.3.21"
failure = "0.1.5"
lazy_static = "1.2.0"
memchr = "2.1.3"
openssl = "0.10"
reqwest = { version = "0.11.2", features = ["blocking"] }
roxmltree = "0.14.1"
time = "0.1"
url = "2.1"
