[package]
name = "moonfire-rtsp"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.48"
base64 = "0.13.0"
bytes = "1.0.1"
digest_auth = "0.2.4"
failure = "0.1.8"
futures = "0.3.14"
#h264-reader = "0.4.0"
#h264-reader = { git = "https://github.com/scottlamb/h264-reader", branch = "more-public-fields" }
h264-reader = { git = "https://github.com/dholroyd/h264-reader" }
#h264-reader = { path = "../../crates/h264-reader" }
log = "0.4.8"
mylog = { git = "https://github.com/scottlamb/mylog" }
once_cell = "1.7.2"
pretty-hex = "0.2.1"
rtcp = "0.2.1"
# alternatively: rtp = "0.2.2"
rtp-rs = "0.5.0"
rtsp-types = "0.0.1"
sdp = "0.1.3"
# alternatively: sdp-types = "0.1.1"
smallvec = { version = "1.6.1", features = ["union"] }
structopt = "0.3.21"
time = "0.1.43"
tokio = { version = "1.5.0", features = ["full"] }
tokio-util = { version = "0.6.6", features = ["codec"] }
url = "2.2.1"

[dev-dependencies]
mylog = { git = "https://github.com/scottlamb/mylog" }
