[package]
name = "moonfire-rtsp"
version = "0.1.0"
authors = ["Scott Lamb <slamb@slamb.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
retina = { git = "https://github.com/scottlamb/retina", branch = "main" }
failure = "0.1.8"
futures = "0.3.14"
log = "0.4.8"
mylog = { git = "https://github.com/scottlamb/mylog" }
parking_lot = "0.11.0"
rusqlite = "0.25.3"
structopt = "0.3.21"
tokio = { version = "1.5.0", features = ["full", "parking_lot"] }
url = "2.2.1"
